CBAC personal notebooks

--- a/notebook/CBAC/ml/first_notebook.ipynb
+++ b/notebook/CBAC/ml/first_notebook.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In This notebook you'll find my very first data exploration and modeling (must not be consider) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +43,46 @@
     "fct_respiratory = pd.read_csv(\"../../data/fct_respiratory.csv\")\n",
     "fct_temperature = pd.read_csv(\"../../data/fct_temperature.csv\")\n",
     "clean_data = pd.read_csv(\"../../data/clean_data/clean_Bloc_files.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(411, 91)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dim_patient.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fct_neurology.id_patient.nunique()"
    ]
   },
   {
@@ -552,54 +599,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dayofweek                                 0\n",
-      "los_total_ventilation                     0\n",
-      "heure_arrivee_rea                         0\n",
-      "other_organ_transplantation               0\n",
-      "thoracic_surgery_history                  0\n",
-      "ecmo_during_surgery                       0\n",
-      "moment_de_pose_ecmo                       1\n",
-      "age                                       0\n",
-      "ffp                                       0\n",
-      "cause_no_dependance                       0\n",
-      "exvivo                                    0\n",
-      "exclusion_plasmapherese                   0\n",
-      "cause_ecmo                                0\n",
-      "transplanted_twice_during_study_period    0\n",
-      "ecmo_duration                             0\n",
-      "fluid_support                             0\n",
-      "exclusion_pf                              0\n",
-      "preoperative_vasopressor                  0\n",
-      "preoperative_pulmonary_hypertension       2\n",
-      "first_lung_ischemic_time                  1\n",
-      "diff transplantation sortie               0\n",
-      "postoperative_ecmo                        0\n",
-      "preoperative_mechanical_ventilation       0\n",
-      "preoperative_ecmo                         0\n",
-      "plasmapherese                             0\n",
-      "retransplant                              0\n",
-      "super_urgence                             0\n",
-      "los_first_ventilation                     0\n",
-      "prdc                                      0\n",
-      "pulmonary_reduction                       0\n",
-      "only_intraoperative_ecmo                  0\n",
-      "pfo                                       2\n",
-      "adre_end_surgery                          0\n",
-      "no_dependence                             0\n",
-      "estimated_blood_loss                      1\n",
-      "body_mass_index                           0\n",
-      "cec                                       0\n",
       "pathologie                                0\n",
-      "exclusion_ino                             0\n",
-      "sexe                                      0\n",
-      "preoperative_icu                          0\n",
       "month                                     0\n",
-      "time_on_waiting_liste                     0\n",
-      "second_lung_ischemic_time                 1\n",
+      "plasmapherese                             0\n",
+      "prdc                                      0\n",
+      "first_lung_ischemic_time                  1\n",
+      "other_organ_transplantation               0\n",
+      "moment_de_pose_ecmo                       1\n",
+      "preoperative_vasopressor                  0\n",
       "adrenaline_perop                          0\n",
-      "platelets                                 0\n",
-      "diabetes                                  0\n",
       "exclusion_lactate                         0\n",
+      "exclusion_plasmapherese                   0\n",
+      "postoperative_ecmo                        0\n",
+      "pfo                                       2\n",
+      "platelets                                 0\n",
+      "age                                       0\n",
+      "thoracic_surgery_history                  0\n",
+      "ecmo_duration                             0\n",
+      "cause_ecmo                                0\n",
+      "exvivo                                    0\n",
+      "retransplant                              0\n",
+      "diabetes                                  0\n",
+      "exclusion_ino                             0\n",
+      "super_urgence                             0\n",
+      "cec                                       0\n",
+      "preoperative_pulmonary_hypertension       2\n",
+      "exclusion_pf                              0\n",
+      "los_first_ventilation                     0\n",
+      "fluid_support                             0\n",
+      "preoperative_icu                          0\n",
+      "pulmonary_reduction                       0\n",
+      "second_lung_ischemic_time                 1\n",
+      "los_total_ventilation                     0\n",
+      "time_on_waiting_liste                     0\n",
+      "diff transplantation sortie               0\n",
+      "transplanted_twice_during_study_period    0\n",
+      "sexe                                      0\n",
+      "adre_end_surgery                          0\n",
+      "dayofweek                                 0\n",
+      "estimated_blood_loss                      1\n",
+      "no_dependence                             0\n",
+      "cause_no_dependance                       0\n",
+      "heure_arrivee_rea                         0\n",
+      "preoperative_ecmo                         0\n",
+      "ffp                                       0\n",
+      "preoperative_mechanical_ventilation       0\n",
+      "only_intraoperative_ecmo                  0\n",
+      "body_mass_index                           0\n",
+      "ecmo_during_surgery                       0\n",
       "dtype: int64\n"
      ]
     }
@@ -650,6 +697,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -664,7 +718,15 @@
    "source": [
     "dum = pd.get_dummies(X[var_category])\n",
     "X = pd.concat([dum, X], axis = 1)\n",
-    "X.drop(var_category, inplace = True, axis = 1)\n",
+    "X.drop(var_category, inplace = True, axis = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "y = pd.get_dummies(y)\n",
     "y = y['immediate extubation has been successfull']"
@@ -672,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -704,10 +766,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9262820512820513"
+       "0.9417582417582417"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +804,7 @@
        "       [ 0, 40]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -771,13 +833,184 @@
        "Name: immediate extubation has been successfull, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X['target'] = y \n",
+    "X.to_csv('../../data/clean_dataset_ml.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.77006520e+02,  1.08245764e+03],\n",
+       "       [-4.45302934e+02, -3.08816722e+02],\n",
+       "       [-9.84920765e+01,  5.37349653e+02],\n",
+       "       [-4.22043897e+02,  1.02359774e+02],\n",
+       "       [-1.82845297e+02,  5.33693719e+01],\n",
+       "       [-4.01246380e+02,  8.28772063e+02],\n",
+       "       [-2.34505756e+01,  1.16562387e+03],\n",
+       "       [-4.17315841e+02,  1.80350331e+02],\n",
+       "       [-4.46340701e+02, -1.51291773e+02],\n",
+       "       [-5.15008650e+02, -1.50297236e+03],\n",
+       "       [-4.43695566e+02, -3.70072011e+02],\n",
+       "       [-4.19438669e+02, -1.95590092e+01],\n",
+       "       [-4.77405837e+02, -1.08605594e+03],\n",
+       "       [-6.42819936e+01,  1.63598392e+03],\n",
+       "       [-3.90432427e+02,  7.78099712e+02],\n",
+       "       [-5.09248535e+02, -1.88346911e+03],\n",
+       "       [-4.64952234e+02, -9.01576838e+02],\n",
+       "       [-4.64968865e+02, -8.82176028e+02],\n",
+       "       [-4.32541983e+02,  1.32757669e+03],\n",
+       "       [-3.98521396e+02,  5.12397063e+02],\n",
+       "       [-2.93195512e+02, -5.38802206e+02],\n",
+       "       [-2.45276867e+02, -1.31802435e+03],\n",
+       "       [-3.77226989e+02,  1.11186472e+03],\n",
+       "       [-4.34421351e+02, -1.40589919e+02],\n",
+       "       [-3.80087563e+02,  1.43824641e+03],\n",
+       "       [-2.40395960e+02,  4.05853686e+03],\n",
+       "       [-4.54889316e+02, -4.45456886e+02],\n",
+       "       [-5.05454445e+02, -1.57993778e+03],\n",
+       "       [-3.76646433e+02,  1.04286870e+03],\n",
+       "       [-2.60323358e+02,  3.58561087e+03],\n",
+       "       [-4.14121439e+02,  4.02244537e+02],\n",
+       "       [ 3.89253404e+03,  4.87696849e+01],\n",
+       "       [-4.76767808e+02, -1.02899871e+03],\n",
+       "       [-1.88600187e+02, -6.23932103e+01],\n",
+       "       [ 4.56914874e+04, -1.87382224e+02],\n",
+       "       [-1.73391529e+02, -2.66623656e+02],\n",
+       "       [ 1.38262003e+02,  1.68602957e+03],\n",
+       "       [ 7.42496143e+01,  5.13407315e+02],\n",
+       "       [-4.80016408e+02, -1.08080773e+03],\n",
+       "       [-1.98225797e+02, -7.81235732e+01],\n",
+       "       [-4.43900546e+02, -3.07839592e+02],\n",
+       "       [-1.98636960e+02,  2.70144519e+02],\n",
+       "       [-4.47007533e+02, -5.26622887e+01],\n",
+       "       [-4.21172773e+02,  6.18574338e+01],\n",
+       "       [-3.65034695e+02,  1.26780954e+03],\n",
+       "       [-4.68170383e+02, -7.78566933e+02],\n",
+       "       [-4.78114827e+02, -1.18183711e+03],\n",
+       "       [-4.20363019e+02,  5.16513032e+02],\n",
+       "       [-3.99966550e+02,  7.48457782e+02],\n",
+       "       [-4.11692298e+02,  5.43217935e+02],\n",
+       "       [-5.25738531e+01,  1.10726882e+03],\n",
+       "       [-3.89708847e+01,  1.63483009e+03],\n",
+       "       [-3.22095135e+02, -1.86479471e+03],\n",
+       "       [-4.32555196e+02, -2.02260092e+02],\n",
+       "       [-2.16678138e+02, -1.41501892e+02],\n",
+       "       [-4.46686689e+02, -1.50418412e+02],\n",
+       "       [-4.68278911e+02, -7.98076841e+02],\n",
+       "       [-2.00686099e+02, -1.30153148e+03],\n",
+       "       [-4.21217102e+02,  3.46000253e+00],\n",
+       "       [-3.77259398e+02,  1.14124522e+03],\n",
+       "       [-1.79973827e+02, -1.05557770e+03],\n",
+       "       [-4.69120279e+02, -6.40817413e+02],\n",
+       "       [-4.21694829e+02,  7.22776557e+01],\n",
+       "       [-4.56758266e+02, -6.50204357e+02],\n",
+       "       [-4.47752865e+02, -5.14897696e+01],\n",
+       "       [-4.45430722e+02, -3.66764690e+02],\n",
+       "       [-4.55826049e+02, -6.32060425e+02],\n",
+       "       [-2.93951302e+02, -8.45566340e+02],\n",
+       "       [-4.16423238e+02,  1.00774505e+02],\n",
+       "       [-4.22004315e+02,  2.18551349e+02],\n",
+       "       [-2.54006079e+02,  4.10974824e+03],\n",
+       "       [-3.97898207e+02,  6.86073355e+02],\n",
+       "       [-3.69258090e+02,  1.71177106e+03],\n",
+       "       [-4.16898372e+02,  1.40555981e+02],\n",
+       "       [-3.99520200e+02,  6.31056110e+02],\n",
+       "       [-4.00457248e+02,  7.49770027e+02],\n",
+       "       [-5.03026376e+02, -1.29810144e+03],\n",
+       "       [-4.75897471e+02, -1.06936473e+03],\n",
+       "       [-4.89819814e+02, -1.45513410e+03],\n",
+       "       [-3.53553904e+02,  1.51235251e+03],\n",
+       "       [-4.41525983e+02, -1.70627473e+02],\n",
+       "       [-4.77924459e+02, -1.22084327e+03],\n",
+       "       [-4.89921420e+02, -1.38697158e+03],\n",
+       "       [-3.86912974e+02,  7.66533987e+02],\n",
+       "       [-3.87593506e+02,  7.78229000e+02],\n",
+       "       [-3.56738366e+02, -1.47806862e+03],\n",
+       "       [-5.22591524e+02, -1.91536118e+03],\n",
+       "       [-3.78196606e+02,  1.31764589e+03],\n",
+       "       [-4.21362084e+02,  4.28288945e+01],\n",
+       "       [-2.88900027e+01, -8.92715922e+02],\n",
+       "       [-4.91285264e+02, -1.36489533e+03],\n",
+       "       [-3.72989560e+02,  1.15208349e+03],\n",
+       "       [-4.88515455e+02, -1.42853426e+03],\n",
+       "       [-4.22992344e+02,  1.42784719e+02],\n",
+       "       [-4.66977196e+02, -8.58849971e+02],\n",
+       "       [-4.89520113e+02, -1.42636409e+03],\n",
+       "       [-3.98828596e+02,  5.22824134e+02],\n",
+       "       [-4.44894214e+02, -3.09634891e+02],\n",
+       "       [-3.99255276e+02,  6.69389525e+02],\n",
+       "       [-4.44734220e+02, -3.48792410e+02],\n",
+       "       [-4.20793869e+02, -1.72122673e+01],\n",
+       "       [-4.43943350e+02, -4.47450470e+02],\n",
+       "       [-4.43766816e+02, -4.47886580e+02],\n",
+       "       [-5.12433392e+02, -1.91588030e+03],\n",
+       "       [-4.89965536e+02, -1.32859474e+03],\n",
+       "       [-4.00194857e+02,  7.29534103e+02],\n",
+       "       [-4.00024616e+02,  7.29153352e+02],\n",
+       "       [-4.27133348e+02,  6.84962864e+01],\n",
+       "       [-4.67464737e+02, -9.35596534e+02],\n",
+       "       [-4.45729654e+02, -2.49723372e+02],\n",
+       "       [-1.14835240e+02, -4.36609177e+02],\n",
+       "       [-3.73337792e+02, -9.91781089e+02],\n",
+       "       [-4.44703846e+02, -3.48918482e+02],\n",
+       "       [-4.32560052e+02, -2.41648534e+02],\n",
+       "       [-4.35433612e+02, -1.19468724e+02],\n",
+       "       [-4.25989720e+02, -2.23017376e+01],\n",
+       "       [-1.68496047e+02, -4.59246678e+02],\n",
+       "       [-5.52539856e+01,  1.79292437e+03],\n",
+       "       [-4.54926833e+02, -7.51333233e+02],\n",
+       "       [-4.89253507e+02, -1.40779279e+03],\n",
+       "       [-4.29710845e+02, -2.47129241e+02],\n",
+       "       [-2.87317752e+02, -2.13859181e+02],\n",
+       "       [-4.43907860e+02, -4.47563052e+02],\n",
+       "       [-1.48787554e+02,  7.66873907e+02],\n",
+       "       [-4.77422629e+02, -1.28031270e+03],\n",
+       "       [-4.45863119e+02, -2.68776202e+02],\n",
+       "       [-4.12049248e+02,  3.88576926e+02],\n",
+       "       [-3.72595690e+02,  1.11277530e+03],\n",
+       "       [-1.65671912e+02,  1.84681530e+03],\n",
+       "       [-3.53686818e+02,  1.49297727e+03],\n",
+       "       [-4.41690920e+02, -4.42133755e+02],\n",
+       "       [-4.45369674e+02, -3.47574576e+02],\n",
+       "       [-3.77161226e+02,  1.12151658e+03],\n",
+       "       [-3.99347447e+02,  6.11358341e+02],\n",
+       "       [-4.44146602e+02, -5.24822497e+02]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "principalComponents"
    ]
   },
   {
